Fixed grama-body overflowing when first sub-element starts with a margin.

--- a/styles/general/general.less
+++ b/styles/general/general.less
@@ -25,6 +25,7 @@
 		height: 100%;
 		width: 100%;
 		overflow: auto;
+		display: flex;
 
 		.grama-main {
 			width: var(--content_widthWithMargins);
@@ -47,6 +48,7 @@
 			}
 		}
 	}
+
 }
 
 //\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/
